--- a/index.html
+++ b/index.html
@@ -1,1 +1,182 @@
-Marta, dawaj zaproszenia :)
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Mrówka i Simin biorą ślub!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet'
+          type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/icomoon.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<div class="fh5co-loader"></div>
+
+<div id="page">
+    <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/img_bg_2.jpg);"
+            data-stellar-background-ratio="0.5">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 text-center">
+                    <div class="display-t">
+                        <div class="display-tc animate-box" data-animate-effect="fadeIn">
+                            <h1>Aleksandra & Łukasz</h1>
+                            <h2>Pobieramy się!</h2>
+                            <div class="simply-countdown simply-countdown-one"></div>
+                            <p><a href="#" class="btn btn-default btn-sm">Dodaj do kalendarza</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div id="fh5co-couple">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+                    <h2>Para młoda</h2>
+                    <p>Co mówią o sobie wzjamenie?</p>
+                </div>
+            </div>
+            <div class="couple-wrap animate-box">
+                <div class="couple-half">
+                    <div class="groom">
+                        <img src="images/bride.jpg" alt="Aleksandra" class="img-responsive">
+                    </div>
+                    <div class="desc-groom">
+                        <h3>Ola o Łukaszu</h3>
+                        <p style="font-size:14px">
+                            Łuki to spokojny, stateczny i rozważny człowiek. Zawsze wszystko musi być tak jak sobie
+                            zaplanował- rozwieszone koszuleczki bez zagnieceń na suszarce, idealnie ułożona fryzura lub
+                            jajo sadzone poprawnie pływające 😃
+                            Wspiera, pomaga, jest zawsze kiedy go potrzebuje.
+                            Cudowny tatuś Tolusi- zawsze gorące powitania po powrocie do domu🐶 zaangażowany w życiu
+                            zawodowym jak i prywatnym ❤️
+                            Nie pozwala się smucić, nawet gdy ma gorszy dzień. Lubi czasem zdenerwować, zwłaszcza gdy
+                            nie włoży worka do kosza na śmieci😳 teraz już wie ze kalafior jest biały a brokuł zielony😀
+                            A tak naprawdę : odpowiedzialny, Madry, zaradny- mój wspaniały przyszły maz ❤️
+                        </p>
+                    </div>
+                </div>
+                <p class="heart text-center"><i class="icon-heart2"></i></p>
+                <div class="couple-half">
+                    <div class="bride">
+                        <img src="images/groom.jpg" alt="Łukasz" class="img-responsive">
+                    </div>
+                    <div class="desc-bride">
+                        <h3>Łukasz o Oli</h3>
+                        <p style="font-size:14px">
+                            Ola jest cudowna, ale to za łatwo powiedziane, a wiec tu trochę się rozwinę. Moi drodzy
+                            uważajcie na to bo właśnie wypiłem Monstera i mam głowę rapera.
+                            Po pierwsze Skarbie wiedz o tym, ze jesteś całym mym światem. Codziennie rano się budzę w
+                            ukochanych ramionach. Widząc Cię każdego ranka jaram się jakby to była Nasza pierwsza
+                            randka. Codzień dajesz mi wszystko co masz a przede wszystkim uśmiechnięta piękną twarz. 11
+                            wspólnych lat za nami, a jeszcze więcej przed nami. Czasami jest słońce, a czasami burza, a
+                            wtedy Twój charakter się wkurza. Lecz nasza miłość i tak wszystkie przeszkody wyburza.
+                            Nawet nie wiesz jak bardzo się cieszę, ze znalazłem serce które mnie rozumie i niesie.
+                            Dziękuję Ci ze jesteś.
+                            Jesteś doskonała, jesteś urodziwa więc ja dla Ciebie zrobię wszystko, abyś była szczęśliwa
+                            żebyś nigdy nie czuła smutku i żalu w naszym codziennym realu. Wszyscy dobrze wiemy ze
+                            jesteś boska i bardzo zazdrosna. Twoja zadrość cały czas jest na baczność, ale będę dbał o
+                            to byś kosztowała każdego dnia same złoto. Gwarantuje Ci zawsze i wszędzie że w życiu dobrze
+                            Ci ze mną będzie.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/img_bg_3.jpg);">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+                    <span>Rozkład jazdy</span>
+                    <h2>Ślub i wesele</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="display-t">
+                    <div class="display-tc">
+                        <div class="col-md-10 col-md-offset-1">
+                            <div class="col-md-6 col-sm-6 text-center">
+                                <div class="event-wrap animate-box">
+                                    <h3>Ceremonia zaślubin</h3>
+                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
+                                        Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+                                        right at the coast of the Semantics, a large language ocean.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-sm-6 text-center">
+                                <div class="event-wrap animate-box">
+                                    <h3>Wesele</h3>
+                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
+                                        Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
+                                        right at the coast of the Semantics, a large language ocean.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- jQuery -->
+<script src="js/jquery.min.js"></script>
+<!-- jQuery Easing -->
+<script src="js/jquery.easing.1.3.js"></script>
+<!-- Bootstrap -->
+<script src="js/bootstrap.min.js"></script>
+<!-- Waypoints -->
+<script src="js/jquery.waypoints.min.js"></script>
+<!-- Carousel -->
+<script src="js/owl.carousel.min.js"></script>
+<!-- countTo -->
+<script src="js/jquery.countTo.js"></script>
+
+<!-- Stellar -->
+<script src="js/jquery.stellar.min.js"></script>
+<!-- Magnific Popup -->
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/magnific-popup-options.js"></script>
+
+<!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js"></script> -->
+<script src="js/simplyCountdown.js"></script>
+<!-- Main -->
+<script src="js/main.js"></script>
+
+<script>
+    var d = new Date(2023, 10, 7, 17, 0, 0);
+
+    // default example
+    simplyCountdown('.simply-countdown-one', {
+        year: d.getFullYear(),
+        month: d.getMonth() + 1,
+        day: d.getDate()
+    });
+
+    //jQuery example
+    $('#simply-countdown-losange').simplyCountdown({
+        year: d.getFullYear(),
+        month: d.getMonth() + 1,
+        day: d.getDate(),
+        enableUtc: false
+    });
+</script>
+
+</body>
+</html>
+
