--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                             <h1>Aleksandra & Łukasz</h1>
                             <h2>Pobieramy się!</h2>
                             <div class="simply-countdown simply-countdown-one"></div>
-                            <p><a href="#" class="btn btn-default btn-sm">Dodaj do kalendarza</a></p>
+                            <p>
+                                <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Ola+i+%C5%81ukasz+bior%C4%85+%C5%9Alub%21&details=Tego+dnia+przed+o%C5%82tarzem+z%C5%82o%C5%BC%C4%85+sobie+przysi%C4%99g%C4%99+i+b%C4%99d%C4%85+%C5%BCyli+d%C5%82ugo+i+szcz%C4%99%C5%9Bliwie%2C+pi%C4%99kna+Ola+i+urodziwy+%C5%81ukasz.+Mi%C5%82o%C5%9B%C4%87+ich+trwa+i+b%C4%99dzie+trwa%C5%82a+zawsze.&location=Ko%C5%9Bci%C3%B3%C5%82+w+Wieliszewie%2C+Modli%C5%84ska+58%2C+05-135+Wieliszew%2C+Polska&dates=20231007T140000Z%2F20231007T150000Z"
+                                   class="btn btn-default btn-sm">Dodaj do kalendarza</a></p>
                         </div>
                     </div>
                 </div>
@@ -113,17 +115,75 @@
                             <div class="col-md-6 col-sm-6 text-center">
                                 <div class="event-wrap animate-box">
                                     <h3>Ceremonia zaślubin</h3>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                                        Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-                                        right at the coast of the Semantics, a large language ocean.</p>
+                                    <p>
+                                        W najpiękniejszym dniu swojego życia
+                                        <br/><span style="font-size:3rem">7 października 2023 roku</span>
+                                        gdy wskazówki zegara wskażą godzinę 16:00,
+                                        w Parafii Przymierzenia Pańskiego w Wieliszewie
+                                        Ola i Łukasz rozpoczną wspólną drogę życia.
+                                    </p>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6 text-center">
                                 <div class="event-wrap animate-box">
                                     <h3>Wesele</h3>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                                        Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-                                        right at the coast of the Semantics, a large language ocean.</p>
+                                    <p>
+                                        Po ceremonii zaślubin z gośćmi weselnymi młodzi spotkają się w domu weselnym
+                                        <br/><span style="font-size:3rem">Smak Życia</span>przy ul. Niepodległości 149 w
+                                        Wieliszewie.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="fh5co-testimonial">
+        <div class="container">
+            <div class="row">
+                <div class="row animate-box">
+                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+                        <span>Szukajcie ich na sali</span>
+                        <h2 style="margin-top: 40px">Świadkowa</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 animate-box">
+                        <div class="wrap-testimony">
+                            <div class="item">
+                                <div class="testimony-slide active text-center">
+                                    <figure>
+                                        <img src="images/natalia.jpg" alt="Natalia">
+                                    </figure>
+                                    <span>Natalia</span>
+                                    <small>505 675 196</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row" style="margin-top: 40px">
+                <div class="row animate-box">
+                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+                        <h2>Świadek</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 animate-box">
+                        <div class="wrap-testimony">
+                            <div class="item">
+                                <div class="testimony-slide active text-center">
+                                    <figure>
+                                        <img src="images/kamil.jpg" alt="Kamil">
+                                    </figure>
+                                    <span>Kamil</span>
+                                    <small>510 363 333</small>
                                 </div>
                             </div>
                         </div>
@@ -133,7 +193,20 @@
         </div>
     </div>
 </div>
+<footer id="fh5co-footer" role="contentinfo">
+    <div class="container">
 
+        <div class="row copyright">
+            <div class="col-md-12 text-center">
+                <p>
+                    <small class="block">Do zobaczniea!</small>
+                </p>
+                <p></p>
+            </div>
+        </div>
+
+    </div>
+</footer>
 <!-- jQuery -->
 <script src="js/jquery.min.js"></script>
 <!-- jQuery Easing -->
@@ -159,7 +232,7 @@
 <script src="js/main.js"></script>
 
 <script>
-    var d = new Date(2023, 10, 7, 17, 0, 0);
+    var d = new Date(2023, 9, 7, 16, 0, 0);
 
     // default example
     simplyCountdown('.simply-countdown-one', {
