--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="row copyright">
             <div class="col-md-12 text-center">
                 <p>
-                    <small class="block">Do zobaczniea!</small>
+                    <small class="block">Do zobaczenia!</small>
                 </p>
                 <p></p>
             </div>
